kubernetes/client-literaturetime.yml
---
kind: Deployment
apiVersion: apps/v1
metadata:
    name: client-literaturetime
    namespace: literature

spec:
    replicas: 2
    template:
        metadata:
            labels:
                app: client-literaturetime
        spec:
            containers:
                - name: client-literaturetime
                  image: ghcr.io/blomma/client.literaturetime:main
                  ports:
                      - containerPort: 80
                  imagePullPolicy: Always
    selector:
        matchLabels:
            app: client-literaturetime

---
kind: Service
apiVersion: v1
metadata:
    name: client-literaturetime
    namespace: literature

spec:
    ports:
        - name: http
          port: 80
    selector:
        app: client-literaturetime

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: client-literaturetime-dev-http
    namespace: literature
spec:
    entryPoints:
        - web
    routes:
        - match: Host(`client-literaturetime.192.168.1.11.nip.io`) && PathPrefix(`/`)
          kind: Rule
          services:
              - name: client-literaturetime
                port: http

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: client-literaturetime-dev-https
    namespace: literature
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`client-literaturetime.192.168.1.11.nip.io`) && PathPrefix(`/`)
          kind: Rule
          services:
              - name: client-literaturetime
                port: http

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
    name: redirect
    namespace: literature
spec:
    redirectScheme:
        scheme: https
        permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: client-literaturetime-http-prod
    namespace: literature
spec:
    entryPoints:
        - web
    routes:
        - match: Host(`literature.artsoftheinsane.com`) && PathPrefix(`/`)
          kind: Rule
          services:
              - name: client-literaturetime
                port: http
          middlewares:
              - name: redirect

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: client-literaturetime-prod
    namespace: literature
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`literature.artsoftheinsane.com`) && PathPrefix(`/`)
          kind: Rule
          services:
              - name: client-literaturetime
                port: http

    tls:
        certResolver: le-prod
        options:
            name: tlsoptions
        domains:
            - main: literature.artsoftheinsane.com
